2.0.15
======
- Modified Link URL generation in @{...} expressions in order to use response.encodeURL(...) instead
  of always adding jsessionid, for better web container integration.
- Divide "processOnlyElementNodes" flag in Arguments into two different flags (processTextNodes
  and processCommentNodes) in order to allow activation of text/comment processing separately.
  

2.0.14
======
- Make "and" and "or" operators in Standard Expressions short circuit (second operand is never
  evaluated if first operand gives enough information). 
- Added "additionalProcessors" property to StandardDialect in order to being able to easily add
  a set of custom processors to the Standard or SpringStandard dialects.
- Added #vars expression utility object as a synonym to #root.  
- Fixed flags recomputeProcessorsImmediately and recomputeProcessorsAfterEachExecution not
  being able to trigger a true re-computation of an element.
- Fixed null dialect prefixes causing an exception.
- Added future-parser support for non-XML-well-formed template code.


2.0.13
======
- Fixed selection target not being correctly applied to Node as a local variable, and 
  this resulting in *{...} not working OK when th:object was specified in an element
  with th:remove="tag".
- Fixed thread indexes and other thread-local-maintained information not being
  correctly updated with nested executions.
- Added "setProcessable(...)" to DOM nodes in order to differentiate between skippability
  (apparently having no applicable processors) and processability (allowance or
  prohibition on a node's execution).
- Created org.thymeleaf.processor.document package for easily creating processors for
  Document nodes.
- Created org.thymeleaf.processor.document.ProcessAllNodesDocumentProcessor for
  setting the "processOnlyElementNodes" flag to false at the beginning of template
  execution.


2.0.12
======
- Avoid "jsessionid" fragment being output in links when Google is indexing a site that