@@ -4,6 +4,7 @@
   of always adding jsessionid, for better web container integration.
 - Divide "processOnlyElementNodes" flag in Arguments into two different flags (processTextNodes
   and processCommentNodes) in order to allow activation of text/comment processing separately.
+- Added close operation on template Readers in case a parsing exception occurs.
   
 
 2.0.14
